--- a/social-links-profile-main/social-links-profile-main/package.json
+++ b/social-links-profile-main/social-links-profile-main/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fontsource/inter": "^5.2.5",
     "@tailwindcss/cli": "^4.0.14",
     "tailwindcss": "^4.0.14"
   }
